# ProteusLite-Qt

./: .gitignore  CMakeLists.txt  README.md  SECTION03_README_FA.md  SECTION04_README_FA.md  SECTION05_README_FA.md  SECTION06_README_FA.md  SECTION07_README_FA.md  SHA256SUMS.txt  advancedcomponent.cpp  advancedcomponent.h  basiccomponent.cpp  basiccomponent.h  canvasview.cpp  canvasview.h  circuitmodel.cpp  circuitmodel.h  componentdefinition.cpp  componentdefinition.h  componentitem.cpp  componentitem.h  componentlibrarypanel.cpp  componentlibrarypanel.h  convertercomponents.cpp  convertercomponents.h  firmwareloader.cpp  firmwareloader.h  junctionitem.cpp  junctionitem.h  main.cpp  mainwindow.cpp  mainwindow.h  microcontrollercore.cpp  microcontrollercore.h  projectdocument.cpp  projectdocument.h  recentprojectsmanager.cpp  recentprojectsmanager.h  schematicpreviewwidget.cpp  schematicpreviewwidget.h  (+10 more)
examples/: sample_project.json  sample_project.xml  section07_blink.hex
